# traxdub

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
src/: main.rs
src/controller/: driver.rs  init.rs  midi.rs  mod.rs
src/controller/feature/: input.rs  mod.rs  output.rs  persistence.rs  plugin.rs  system.rs
src/engine/: lv2.rs  mod.rs  protocol.rs
src/ui/: console.js  control.js  grid.js  logo.js  menu.js  mod.rs  rotary.js  style.css  window.html  window.js  window.rs
