[package]
name = "traxdub"
version = "0.1.0"
edition = "2021"

[dependencies]
# MIDI and JACK support
jack = "0.11"

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (if needed for future features)
tokio = { version = "1.0", features = ["full"], optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"

[features]
default = []
async = ["tokio"]
